ingress/ingress.yaml
# microservices-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  
spec:
  rules:
    - host: microservices.local
      http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 3003
          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 3003
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 3003
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 3003
